--- a/app/src/main/res/layout/activity_collection_view.xml
+++ b/app/src/main/res/layout/activity_collection_view.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.va.dtcandroid.CollectionViewActivity">
 
-    <TextView android:id="@+id/collectionText" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></TextView>
-
+    <android.support.v4.view.ViewPager android:id="@+id/piecesPager"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+    </android.support.v4.view.ViewPager>
 </RelativeLayout>
